# acl-rag-helpdesk-copilot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: it-helpdesk-request.yml
.github/workflows/: helpdesk_execute.yml  helpdesk_propose.yml
docs/: runbook_template.md
docs/internal/: rb-001-vpn-troubleshooting.md  rb-002-mfa-reset-sop.md  rb-003-employee-onboarding-checklist.md  rb-004-access-request-shared-drive.md  rb-005-laptop-replacement-and-secure-wipe.md
docs/public/: rb-001-how-to-request-it-help-ticket-intake-guide.md  rb-002-password-reset-basics-sso-mfa.md  rb-003-vpn-basics-how-to-connect.md  rb-004-device-health-check-basic-troubleshooting.md  rb-005-access-request-basics-approvals-sla.md
docs/restricted/: rb-001-access-grant-policy-procedure.md  rb-002-security-incident-escalation.md  rb-003-admin-account-reset-procedure.md  rb-004-privileged-api-token-handling-rotation.md  rb-005-offboarding-access-revocation.md
docs/workflows/: approval_gate.md
golden_set/: golden_set.jsonl
scripts/: eval_policy.py  eval_retrieval.py  self_check.py  smoke_retriever.sh  smoke_troubleshoot_bias.sh
src/: audit.py  eval.py  github_bot.py  retrieval.py  run.py  text_utils.py
tests/: __init__.py  test_proposal_guard.py
workflows/: acl_policy.md  audit_log_schema.json  directory.csv
