[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "acl-rag-helpdesk-copilot"
version = "0.1.0"
description = "Enterprise AI Helpdesk Copilot (RAG + ACL + GitHub)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vector = ["sentence-transformers", "scikit-learn", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
